# dhx_pytincture_widgetset

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
.pdoc_stubs/: js.py
.pdoc_stubs/pyodide/: __init__.py  ffi.py
dhxdocs/: dhxpyt.html  index.html  quickstart.py  search.js
dhxdocs/dhxpyt/: calendar.html  cardflow.html  cardpanel.html  chart.html  chat.html  colorpicker.html  combobox.html  funcsuck.html  gpu.html  grid.html  kanban.html  layout.html  listbox.html  menu.html  message.html  pagination.html  popup.html  ribbon.html  sidebar.html  slider.html  tabbar.html  theme.html  timepicker.html  toolbar.html  tree.html  window.html
dhxpyt/: __init__.py  calendar.py  chart.py  colorpicker.py  combobox.py  create.sh  form.py  gpu.py  grid.py  layout.py  menu.py  python_code_mapping.txt  sidebar.py  tabbar.py  theme.py  toolbar.py  window.py
dhxpyt.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
dhxpyt/calendar/: __init__.py  calendar.py  calendar_config.py
dhxpyt/cardflow/: __init__.py  cardflow.py  cardflow_config.py
dhxpyt/cardpanel/: __init__.py  cardpanel.py  cardpanel_config.py
dhxpyt/chart/: __init__.py  chart.py  chart_config.py
dhxpyt/chat/: __init__.py  chat.py  chat_config.py
dhxpyt/colorpicker/: __init__.py  colorpicker.py  colorpicker_config.py
dhxpyt/combobox/: __init__.py  combobox.py  combobox_config.py
dhxpyt/config/: __init__.py  base_config.py  calendar_config.py  chart_config.py  colorpicker_config.py  combobox_config.py  layout_config.py  menu_config.py  tabbar_config.py
scripts/: generate_docs.sh  local_build.sh
test/: index.html  proto.json  reconciliation.js
tests/: chat_app.py  multiproxy.py  openaiproxy.py
utils/: funcsuck.py  python_code_mapping.txt
(+117 files in other folders)
