[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dhxpyt"
version = "0.6.5"
description = "Python wrapper for DHTMLX widgets"
readme = "README.md"
requires-python = ">=3.6"
keywords = ["DHTMLX", "widgetset"]
license = { text = "GNU General Public License v2" }
dependencies = [
    "pyodide-py>=0.26.4"
]

[project.urls]
homepage = "https://github.com/pytincture/dhx_pytincture_widgetset"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages]
find = {}
